apps/k3s-demo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k3s-demo
  labels:
    app: k3s-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: k3s-demo
